# 3d-perception

./: .gitmodules  README.md  pyproject.toml
data/kitti/: kitti_yolo.yaml
scripts/: convert_kitti_to_yolo.py  prepare_kitti_yolo.py  run_kitti_yolo_deepsort.py
src/det2d/: train_yolo_kitti.py
src/mot/deepsort/: tracker.py
