[project]
name = "3d-perception"
version = "0.1.0"
description = ""
authors = [
    {name = "seogeuntae",email = "seogt0606@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{ include = "3d-perception" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
